# BUNNY

./: .env.example  .gitignore  Cargo.toml  DIRECTIVE.md  README.md  SWARM_DATA_GOVERNANCE.md  prompts.rs  update_branding.py
SWARM/: patch_voiceai.py
SWARM/comms/: email_client.py  portal_client.py  send.py  signal-ingress.service  signal_ingress.py  start_realtime.sh  voice_agent.py  voice_agent_realtime.py
SWARM/comms/telegram/: run_bot.py
SWARM/directives/: BSA-00-swarm-boundary.md  BSA-01-swarm-architecture.md  BSA-02-infrastructure-operations.md  BSA-03-autonomous-self-improvement.md  BSA-04-autonomous-knowledge-acquisition.md  BSA-08-jack-collaborative-ux.md  BSA-09-swarm-collaboration-protocol.md  BSA-10-strategic-intelligence.md  BSA-11-jack-voice-messaging.md  BSA-12-negotiation-deal-intelligence.md  BSA-13-jack-persona-phone-etiquette.md  BSA-14-swarm-presence-multi-device.md  BSA-15-organizational-knowledge-governance.md  BSA-16-meeting-capture-dictation.md  BSA-17-email-calendar-intelligence.md  BSA-18-workflow-automation.md  BSA-19-autonomous-agent-workforce.md  BSA-20-strategic-planning.md  BSA-21-global-intelligence-monitoring.md  BSA-22-innovation-rd-engine.md  BSA-23-personal-assistant-layer.md  BSA-24-executive-briefing.md  BSA-25-personal-task-intelligence.md  BSA-26-personal-knowledge-memory.md  BSA-27-document-workspace-integration.md  BSA-28-multi-connector-workspace.md  BSA-29-multi-agent-coordination.md  BSA-30-node-deployment.md  BSA-31-swarm-marketplace.md  BSA-32-jenny-personal-agent.md  BSA-33-household-home-automation.md  BSA-34-personal-finance-life-management.md  BSA-35-personal-health-wellness.md  BSA-36-personal-learning-education.md  BSA-37-dual-agent-user-model.md  BSA-38-unified-life-work-intelligence.md  BSA-39-digital-twin-identity.md  BSA-40-ambient-intelligence.md  BSA-41-human-ai-collaboration-governance.md  BSA-42-global-swarm-federation.md  (+8 more)
SWARM/governance/: autopush.py  directive_executor.py  directive_loader.py  directive_store.py  directive_validator.py
crates/agents/: Cargo.toml
crates/agents/src/: agent.rs  config.rs  dispatcher.rs  error.rs  lib.rs  prompts.rs  runner.rs
crates/calculus/: Cargo.toml
crates/calculus/src/: error.rs  gradient.rs  lib.rs  optimizer.rs  similarity.rs  statistics.rs  symbolic.rs  tensor_ops.rs
crates/core/: Cargo.toml  build.rs
crates/core/proto/: agent.proto
crates/core/src/: db.rs  error.rs  ffi.rs  lib.rs  licensing.rs  models.rs  proto.rs  vector.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: artifact.rs  cipher.rs  cloaked.rs  envelope.rs  error.rs  execution.rs  gateway.rs  hybrid_sign.rs  identity.rs  kdf.rs  key_exchange.rs  lib.rs  session.rs  swarm.rs  ternary.rs  transport.rs  types.rs
crates/network/: Cargo.toml
crates/network/src/: client.rs  config.rs  connection.rs  error.rs  framing.rs  lib.rs  peer.rs  server.rs  tls.rs
crates/network/src/orchestration/: coordinator.rs  evolution.rs  health.rs  mod.rs  quantum_dispatch.rs  scheduler.rs  worker_pool.rs
crates/network/src/proxy/: agent_manifest.rs  channel.rs  cloud_fallback.rs  codespace_registry.rs  dispatch.rs  envelope_sign.rs  gpu_worker.rs  inference_dispatch.rs  mod.rs  node_identity.rs  openclaw_bridge.rs  sidecar.rs  tool_call.rs  tool_registry.rs
crates/portal/: Cargo.toml
crates/portal/src/: api.rs  error.rs  lib.rs  manifest_exchange.rs  model_registry.rs  model_resolver.rs  model_sync.rs  router.rs  session_manager.rs  telemetry.rs
crates/sandbox/: Cargo.toml
crates/sandbox/src/: firecracker.rs  lib.rs  threat_hunter.rs
crates/triton/: Cargo.toml
crates/triton/src/: activation.rs  bunny_format.rs  engine.rs  error.rs  layer.rs  lib.rs  model.rs  packing.rs  safetensors_loader.rs  shard.rs
deploy/: deploy-signal-ingress.sh
docs/: TRITON_INFERENCE_STATUS.md
docs/runbooks/: control_plane_gpu_health_contract.md  control_plane_runtime_durability.md
flutter/: pubspec.yaml
flutter/assets/models/: README.md
flutter/lib/: main.dart
flutter/lib/models/: ai_guardian_alert.dart  drone_patrol.dart  iot_device.dart  learning_metrics.dart  sandbox_report.dart  threat_event.dart
flutter/lib/screens/: agent_status_screen.dart  device_manager.dart  globe_view.dart  threat_dashboard.dart
flutter/lib/services/: agent_stream_service.dart  triton_inference_service.dart
flutter/lib/widgets/: agent_status_card.dart  anomaly_feed.dart  device_list.dart  license_manager.dart  threat_heatmap.dart
infra/logrotate/: swarm-mainframe.conf
infra/profiles/: mee_gpu_runtime_manifest.json
infra/provisioning/linux/: apply_mee_checkpoint_policy.py  install_mainframe_disk_guard.sh  install_mee_gpu_runtime.sh  install_swarm_remote_metrics.sh
infra/systemd/: swarm-mainframe-disk-guard.service  swarm-mainframe-disk-guard.timer
scripts/ops/: apply_live_mee_checkpoint_policy.ps1  apply_mee_gpu_scheduler_supervision.ps1  apply_swarm_gpu_checkpoint_retention.ps1  apply_swarm_mainframe_disk_guard.ps1  apply_swarm_remote_metrics.ps1  audit_swarm_mainframe_disk.ps1  check_control_plane_runtime_health.ps1  extend_mainframe_remote_monitoring.ps1  mee_checkpoint_retention.py  provision_swarm_gpu_archive_sink.ps1
services/manufacturing/site/: app.js  index.html  styles.css
tools/: bunny_alpha.py  patch_debug.py  patch_fix_channel.py  slack_direct.py  update_bunny_prompt.py
