[package]
name = "bunny-calculus"
description = "Ternary-native computational tools for BUNNY swarm agents"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
bunny-triton = { path = "../triton" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"
rayon = "1.10"
