[package]
name = "bunny-core"
description = "Core types and services for the BUNNY runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
bunny-crypto = { path = "../crypto" }
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tokio = { version = "1.43", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.9"
prost = "0.14"
uuid = { version = "1.16", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
