[package]
name = "bunny-network"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
[dependencies]
bunny-core = { path = "../core" }
bunny-agents = { path = "../agents" }
aya = { version = "0.13.1", features = ["async_tokio"] }
pnet = "0.35.0"
tokio = { version = "1.43", features = ["full"] }
