[package]
name = "bunny-network"
description = "QUIC transport layer for BUNNY encrypted swarm communication"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
bunny-crypto = { path = "../crypto" }
bunny-agents = { path = "../agents" }
quinn = "0.11"
rustls = { version = "0.23", features = ["ring"] }
tokio = { version = "1.43", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.9"
thiserror = "2.0"
tracing = "0.1"
dashmap = "6.1"
uuid = { version = "1.16", features = ["v4", "serde"] }
rcgen = "0.13"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
