[package]
name = "bunny-portal"
description = "AI Portal — HTTP/gRPC gateway and swarm entry point for BUNNY"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
bunny-crypto = { path = "../crypto" }
bunny-triton = { path = "../triton" }
bunny-network = { path = "../network" }
bunny-agents = { path = "../agents" }
bunny-core = { path = "../core" }
tokio = { version = "1.43", features = ["full"] }
axum = { version = "0.8", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"
uuid = { version = "1.16", features = ["v4", "serde"] }
dashmap = "6.1"
bytes = "1.9"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
