[package]
name = "bunny-sandbox"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
[dependencies]
bunny-core = { path = "../core" }
bunny-agents = { path = "../agents" }
reqwest = { version = "0.12.12", features = ["json", "rustls-tls"] }
tokio = { version = "1.43", features = ["full"] }
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
lancedb = "0.26"
chrono = "0.4"
uuid = { version = "1.16", features = ["v4"] }
