[package]
name = "bunny-sandbox"
description = "Sandboxed execution and threat hunting for BUNNY"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
bunny-core = { path = "../core" }
bunny-agents = { path = "../agents" }
anyhow = "1.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1.43", features = ["full"] }
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
uuid = { version = "1.16", features = ["v4"] }
