[package]
name = "bunny-triton"
description = "Ternary neural network inference engine with 2-bit packed matmul"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"
sha2 = "0.10"
bytemuck = { version = "1.21", features = ["derive"] }
safetensors = "0.5"
rayon = "1.10"
